feat: add project agent scanning and copying
Introduce ProjectAgentScanner and integrate it into CopilotClient so
user-defined project agents are discoverable and usable by the CLI.
CopilotClient.beforeLaunch now copies .md agent files from project
directories into the global agents dir (~/.copilot/agents) and
getAvailableAgents includes scanned project agents in the agent list.
The scanner searches .copilot/agents and .github/agents (with .copilot
taking precedence), parses YAML frontmatter for name/description to
build AgentMode entries, and avoids shadowing built-in agent slugs.
IO errors are logged and non-fatal.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>