@@ -19,24 +19,19 @@ import java.util.Set;
 /**
  * Scans project directories for user-defined Copilot agent {@code .md} files and
  * exposes them as {@link AgentMode} entries for the agent dropdown.
- *
- * <p>Scanned directories (relative to project root, in priority order):
+ * <p>
+ * Scanned directories (relative to project root, in priority order):
  * <ol>
- *   <li>{@code .copilot/agents/} — primary; Copilot CLI convention</li>
- *   <li>{@code .github/agents/} — secondary; GitHub ecosystem convention</li>
- *   <li>{@code agents/}         — fallback; generic project agents directory</li>
+ *   <li>{@code .copilot/agents/}</li>
+ *   <li>{@code .github/agents/}</li>
  * </ol>
- * If multiple directories contain a file with the same slug, the first directory wins.
- * IO errors during scan or copy are logged as warnings and never propagate to callers.
+ * If both directories contain a file with the same name, the {@code .copilot/agents/} version wins.
  */
 final class ProjectAgentScanner {
 
     private static final Logger LOG = Logger.getInstance(ProjectAgentScanner.class);
 
-    /**
-     * Relative paths searched, in priority order.
-     */
-    private static final String[] AGENT_DIRS = {".copilot/agents", ".github/agents", "agents"};
+    private static final String[] AGENT_DIRS = {".copilot/agents", ".github/agents"};
 
     private ProjectAgentScanner() {
     }
@@ -48,7 +43,7 @@ final class ProjectAgentScanner {
      *
      * @param projectBasePath root of the open project
      * @param builtInSlugs    slugs of the hardcoded built-in agents to exclude
-     * @return discovered agents in the order they were found (never null, may be empty)
+     * @return discovered agents (may be empty, never null)
      */
     static @NotNull List<AgentMode> scanProjectAgents(@NotNull Path projectBasePath,
                                                       @NotNull Set<String> builtInSlugs) {
@@ -67,17 +62,25 @@ final class ProjectAgentScanner {
                     AgentMode mode = parseAgentFile(file, slug);
                     if (mode != null) {
                         discovered.put(slug, mode);
-                        LOG.info("ProjectAgentScanner: discovered agent '" + slug + "' from " + file);
                     }
                 }
             } catch (IOException e) {
-                LOG.warn("ProjectAgentScanner: failed to scan agent directory: " + dir, e);
+                LOG.warn("Failed to scan agent directory: " + dir, e);
             }
         }
 
         return new ArrayList<>(discovered.values());
     }
 
+    /**
+     * Copies all discovered project agent {@code .md} files into the global Copilot agents
+     * directory ({@code ~/.copilot/agents/}) so the CLI can resolve them via {@code --agent <slug>}.
+     * Built-in agent filenames are never overwritten.
+     *
+     * @param projectBasePath root of the open project
+     * @param globalAgentsDir the global agents directory (e.g. {@code ~/.copilot/agents/})
+     * @param builtInSlugs    slugs of the hardcoded built-in agents to skip
+     */
     static void copyToGlobalAgentsDir(@NotNull Path projectBasePath,
                                       @NotNull Path globalAgentsDir,
                                       @NotNull Set<String> builtInSlugs) {
@@ -87,49 +90,38 @@ final class ProjectAgentScanner {
 
             try (DirectoryStream<Path> stream = Files.newDirectoryStream(dir, "*.md")) {
                 for (Path file : stream) {
-                    copyAgentFile(file, globalAgentsDir, builtInSlugs);
+                    String filename = file.getFileName().toString();
+                    String slug = filename.substring(0, filename.length() - ".md".length());
+                    if (builtInSlugs.contains(slug)) continue;
+
+                    Path dest = globalAgentsDir.resolve(filename);
+                    try {
+                        Files.copy(file, dest, StandardCopyOption.REPLACE_EXISTING);
+                    } catch (IOException e) {
+                        LOG.warn("Failed to copy agent file to global dir: " + file + " → " + dest, e);
+                    }
                 }
             } catch (IOException e) {
-                LOG.warn("ProjectAgentScanner: failed to scan agent directory for copy: " + dir, e);
+                LOG.warn("Failed to scan agent directory for copy: " + dir, e);
             }
         }
     }
 
-    private static void copyAgentFile(@NotNull Path file, @NotNull Path globalAgentsDir,
-                                      @NotNull Set<String> builtInSlugs) {
-        String filename = file.getFileName().toString();
-        String slug = filename.substring(0, filename.length() - ".md".length());
-        if (builtInSlugs.contains(slug)) {
-            LOG.warn("ProjectAgentScanner: skipping '" + filename
-                + "' — would shadow built-in agent '" + slug + "'");
-            return;
-        }
-        Path dest = globalAgentsDir.resolve(filename);
-        try {
-            Files.copy(file, dest, StandardCopyOption.REPLACE_EXISTING);
-            LOG.info("ProjectAgentScanner: copied " + file + " → " + dest);
-        } catch (IOException e) {
-            LOG.warn("ProjectAgentScanner: failed to copy " + file + " → " + dest, e);
-        }
-    }
-
     /**
-     * Parses a {@code .md} agent file's YAML frontmatter to extract {@code name} and
-     * {@code description}. Returns {@code null} if the file has no valid frontmatter or
-     * cannot be read.
+     * Parses a {@code .md} agent file's YAML frontmatter to extract {@code name} and {@code description}.
+     * Returns {@code null} if the file has no valid frontmatter.
      */
     private static AgentMode parseAgentFile(@NotNull Path file, @NotNull String slug) {
         List<String> lines;
         try {
             lines = Files.readAllLines(file, StandardCharsets.UTF_8);
         } catch (IOException e) {
-            LOG.warn("ProjectAgentScanner: failed to read agent file: " + file, e);
+            LOG.warn("Failed to read agent file: " + file, e);
             return null;
         }
 
-        if (lines.isEmpty() || !lines.getFirst().trim().equals("---")) {
-            // No frontmatter — still valid; use slug as name with no description
-            return new AgentMode(slug, slug, null);
+        if (lines.isEmpty() || !lines.get(0).trim().equals("---")) {
+            return null;
         }
 
         String name = null;
@@ -159,8 +151,8 @@ final class ProjectAgentScanner {
     private static @NotNull String stripYamlValue(@NotNull String raw) {
         String trimmed = raw.trim();
         if (trimmed.length() >= 2
-            && ((trimmed.startsWith("\"") && trimmed.endsWith("\""))
-            || (trimmed.startsWith("'") && trimmed.endsWith("'")))) {
+                && ((trimmed.startsWith("\"") && trimmed.endsWith("\""))
+                || (trimmed.startsWith("'") && trimmed.endsWith("'")))) {
             trimmed = trimmed.substring(1, trimmed.length() - 1);
         }
         return trimmed;
